# sbt-eta

.circleci/: config.yml
example/src/main/eta/: example.cabal
