name:                example
version:             0.1.0.0
license:             MIT
license-file:        LICENSE
author:              Rahul Muttineni
maintainer:          rahulmutt@gmail.com
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

library
  exposed-modules:     Example.Transform
  build-depends:       base >=4.11 && <5
                     , aeson
                     , lens-aeson
                     , lens
                     , text
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings
  maven-depends:       com.google.guava:guava:25.0-jre

test-suite example-test
  type:                exitcode-stdio-1.0
  main-is:             TransformSpec.hs
  build-depends:       base >=4.11 && <5
                     , example
                     , hspec
  hs-source-dirs:      test
  default-language:    Haskell2010